# deep-hook-gitlab-backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_concurrency.sh  test_webhook.sh
app/: config.py  deep_config.py  gitlab_client.py  main.py  task_manager.py  webhook.py
app/handlers/: mr_handlers.py
app/services/: change_converter.py  review_service.py
configs/: projects.yml
configs/deep/: 80180134.deep.yml
